--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ repositories {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.1")
+
 //    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.2'
 //    compile group: 'org.hibernate', name: 'hibernate-validator', version: '6.0.2.Final'
 //    compile group: 'org.springframework', name: 'spring-web', version: '5.0.0.RELEASE'
