--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     compile("mysql:mysql-connector-java:6.0.6")
     testCompile("org.springframework.boot:spring-boot-starter-test")
     compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile("org.springframework.boot:spring-boot-starter-security")
+
 
 
 //    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.2'
@@ -36,6 +38,8 @@ bootRun.environment([
         "WELCOME_MESSAGE": "hello",
         "SPRING_DATASOURCE_URL": developmentDbUrl,
         "MANAGEMENT_SECURITY_ENABLED": false,
+        "SECURITY_FORCE_HTTPS": false,
+        "PORT": "8080",
 
 ])
 
@@ -44,7 +48,8 @@ test.environment([
         "WELCOME_MESSAGE": "Hello from test",
         "SPRING_DATASOURCE_URL": testDbUrl,
         "MANAGEMENT_SECURITY_ENABLED": false,
-
+        "SECURITY_FORCE_HTTPS": false,
+        "PORT": "8080",
 ])
 
 flyway {
